<resources>
    <string name="app_name">My Favorite Movies</string>

    <!-- Menu actions -->
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello word!</string>

    <string name="search_input_hint">Find movies...</string>

    <string name="item_title_format">%1$s (%2$s)</string>

    <string name="item_writer">Writer:</string>
    <string name="item_director">Director:</string>
    <string name="item_actors">Actors:</string>
    <string name="item_language">Language:</string>
    <string name="item_country">Country:</string>
    <string name="item_genre">Genre:</string>
    <string name="item_awards">Awards:</string>

    <string name="message_save_format">\"%1$s\" was saved to favorite list</string>
    <string name="message_delete_format">\"%1$s\" was deleted from favorite list</string>

    <string name="message_network_is_require">Network connection is required to search information. Please check you network.</string>

</resources>
